--- a/style.css
+++ b/style.css
@@ -148,11 +148,12 @@ iframe {
 
     /*(discaimer)*/
 .disclaimer {
+    color: #fff;
     text-align: justify;
     padding: 15px;
     margin: 5rem 2rem 3rem 2rem;
-    background-color: rgba(255, 228, 196, 0.123);
-    border: 1px solid #ff000018; 
+    background-color: #000;
+    border: 1px solid #ff0000; 
     border-radius: 5px;
 }
  
