deleted classification code

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ main {
 iframe {
     /* height: auto;   */
     width: 500px; 
-    height: 2000px;   
+    height: 500px;   
     /* overflow: auto; */
     border: none;
     /* padding: 20px; */
@@ -130,7 +130,7 @@ iframe {
     z-index: 9;
 } */
 
-/* .classification-wrapper {
+.classification-wrapper {
     margin: 10px;
 }
 .classification {
@@ -141,42 +141,8 @@ iframe {
     border: 1px solid lightblue;
     border-radius: 5px;
     cursor: grab;
-} */
+} 
  
-div.wrapper {
-    display: flex;
-    gap: 2.5em;
-    width: fit-content;
-    border: 1px solid #000;
-    background-color: #00000006;
- 
-}
-.className-wrapper {
-    position: sticky;
-    top: 0;
-    color: white;
-    background-color: red;
-}
-.className {
-    /* writing-mode: vertical-rl; */
-    writing-mode: vertical-lr;
-    padding: 5px;
-}
-.no {
-    color: white;
-    background-color: purple;
-
-}
-tbody {
-    background-color: yellow;
-}
-
-td {
-    padding: 5px;
-    text-align: center;
-    font-weight:400;
-}
-
 
     /*(discaimer)*/
 .disclaimer {
