--- a/style.css
+++ b/style.css
@@ -3,13 +3,9 @@
 body {
     display: flex;
     flex-direction: column;
+    height: auto;
 }
- 
-/* header {
-    position: sticky;
-    top: 0;
-} */
-/* nav */
+
 ul {
     list-style-type: none;
     display: flex;
@@ -109,15 +105,9 @@ main {
 }
 
 iframe {
-    /* height: auto;   */
     width: 500px; 
-    height: 500px;   
-    /* overflow: auto; */
-    border: none;
-    /* padding: 20px; */
-    /* z-index: 5; */
-    /* overflow: visible; */
-    
+    height: 700px;   
+    border: none; 
 }
 
 /* .days {
@@ -135,7 +125,7 @@ iframe {
 }
 .classification {
     width: 700px;
-    height: 900px;
+    /* height: 900px; */
     padding: 10px;
     margin: 20px;
     border: 1px solid lightblue;
