--- a/style.css
+++ b/style.css
@@ -67,22 +67,24 @@ main {
         
     }
     .pageOrt-btn {
-        color: #ff0000;
+        color: #fff;
+        width: 300px;
         padding: 15px;
-        background-color: snow;  
-        border: 1px solid black;
+        background-color: #0000ff;  
+        border: none;
         border-radius: 5px; 
         /* margin: 0; */
         font-size: 20px;
     }
     .pageOrt-btn:hover {
-        color: black;
-        background-color: rgba(165, 42, 42, 0.13); 
-        border: 1px solid red; 
+        background-color: #0505c7; 
+        box-shadow: 0 0 5px 2px #808080ab;
+        transition: 0.3s;
     }
     .pageOrt-btn:active {
-        color: black;
-        background-color: yellow;  
+        transform: scale(0.97);  
+        transition: 0.3s;
+        box-shadow: none; 
     }
 
 
