--- a/GAMES/tableStyles.css
+++ b/GAMES/tableStyles.css
@@ -1,4 +1,29 @@
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+header {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: #ff0000;
+}
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#gamesNavigation {
+    /* display: none; */
+    list-style-type: none;
+
+}
+
+
 table {
     width: 500px;
     height: 100%;
