created Daily Result

--- a/GAMES/tableStyles.css
+++ b/GAMES/tableStyles.css
@@ -27,6 +27,7 @@ nav {
 table {
     width: 500px;
     height: 100%;
+    margin: 25px 7px;
     border-collapse: collapse; 
     border-left: 2px solid rgba(0, 0, 0, 0.333);
 }
@@ -48,8 +49,10 @@ th{
 
 td {
     border-top: 1px solid black;
+    padding: 5px 0;
 }
 .serial-num {
+    text-align: center;
     border: 1px solid black;
 }
 .days{
