--- a/style.css
+++ b/style.css
@@ -31,6 +31,23 @@ li {
     margin: 0.5em auto; 
     font-size: small;
 }
+.dailyResult {
+    color: #fff;
+    max-width: 15rem;
+    text-align: center;
+    padding: 15px;
+    background-color: #ff0000;
+    border: none;
+    border-radius: 15px;
+    font-size: 20px;
+}
+.dailyResult:visited {
+    color: #f5f5f5;
+}
+.dailyResult:hover {
+    background-color: #0000ff;
+    transition: 1s;
+}
 li a {
     padding: 15px;
     text-decoration: none;
@@ -139,15 +156,13 @@ main {
 
 .frame {
     width: 550px;
-    height: 100%;   
-    /* z-index: 10; */
-    /* overflow-y: auto; */
-    /* padding: 20px; */
+    height: 100%;  
 }
 
 iframe {
     width: 500px; 
-    height: 700px;   
+    height: 900px;  
+    margin-block-end: 25px; 
     border: none; 
 }
 
