--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ li {
     margin: 0.5em auto; 
     font-size: small;
 }
-.dailyResult {
+#dailyResult {
     color: #fff;
     max-width: 15rem;
     text-align: center;
@@ -41,10 +41,10 @@ li {
     border-radius: 15px;
     font-size: 20px;
 }
-.dailyResult:visited {
+#dailyResult:visited {
     color: #f5f5f5;
 }
-.dailyResult:hover {
+#dailyResult:hover {
     background-color: #0000ff;
     transition: 1s;
 }
