--- a/GAMES/tableStyles.css
+++ b/GAMES/tableStyles.css
@@ -23,9 +23,16 @@ nav {
 
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 
 table {
-    width: 500px;
+    width: 490px;
     height: 100%;
     margin: 25px 7px;
     border-collapse: collapse; 
@@ -52,10 +59,12 @@ td {
     padding: 5px 0;
 }
 .serial-num {
+    width: 25px;
     text-align: center;
     border: 1px solid black;
 }
 .days{
+    width: 60px;
     color: brown;
     border: 1px solid black;
     background-color: whitesmoke;
