--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ main {
 
 iframe {
     width: 500px; 
-    height: 900px;  
+    height: 80rem;  
     margin-block-end: 25px; 
     border: none; 
 }
