--- a/style.css
+++ b/style.css
@@ -31,6 +31,15 @@ li {
     margin: 0.5em auto; 
     font-size: small;
 }
+.nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 20px;
+    background-color: #000;
+    padding: 20px;
+}
 #dailyResult {
     color: #fff;
     max-width: 15rem;
