--- a/style.css
+++ b/style.css
@@ -14,7 +14,12 @@ header {
     align-items: center;
     width: 100%;
     padding: 20px 0;
-    background-color: whitesmoke;
+    background-color: whitesmoke; 
+}
+nav {
+    padding: 40px 0 0;
+    background-color: #005590;
+    
 }
 ul {
     list-style-type: none;
@@ -27,11 +32,11 @@ ul {
 }
 li {
     display: block;
-    border-right: 1px solid black;
+    border-right: 1px solid #ffffff5e;
     margin: 0.5em auto; 
     font-size: small;
 }
-.nav {
+.navigation {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,11 +46,11 @@ li {
     padding: 20px;
 }
 #dailyResult {
-    color: #fff;
-    max-width: 15rem;
+    /* color: #000; */
+    width: 300px;
     text-align: center;
     padding: 15px;
-    background-color: #ff0000;
+    background-color: #2282c7;
     border: none;
     border-radius: 5px;
     font-size: 20px;
@@ -54,21 +59,22 @@ li {
     color: #f5f5f5;
 }
 #dailyResult:hover {
-    background-color: #0000ff;
+    background-color: #2282c7bd;
     transition: 1s;
 }
 li a {
+    color: #fff;
     padding: 15px;
     text-decoration: none;
 }
 li a:hover {
-    color: #fff;
-    background-color: #ff0000;   
+    color: #0000ff;
+    background-color: #fff;    
     border-radius: 5px;
     transition: 0.5s;
 }
 li a:visited {
-    color: purple;
+    color: #ff03035d;
 }
 .home {
     color: black;
@@ -132,7 +138,7 @@ main {
     color: #fff;
     width: 300px;
     height: 55px;
-    top: 25px;
+    top: 25px; 
     padding: 15px;
     background-color: #0077cc;
     border: none;
