--- a/style.css
+++ b/style.css
@@ -37,14 +37,52 @@ li {
     font-size: small;
 }
 .navigation {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 400px;
     gap: 20px;
     background-color: #000;
+    background-image: url("https://i.postimg.cc/TwXjJjQ5/christmas-6743572-1280.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     padding: 20px 0;
+    /* animation: change ease-in-out 10s infinite alternate; */
 }
+    @keyframes change {
+        0% {
+            opacity: 0;
+        }
+        25% {
+            opacity: 0.2;
+        }
+        50% {
+            opacity: 0.6; 
+        }
+        75% {
+            opacity: 0.8;
+        }
+        100% {
+            opacity: 1;
+        }
+    }
+    .navigation .merry-christmas {
+        position: absolute;
+        color: #f5f5f5;
+        top: 65%;
+        padding: 10px;
+        border-radius: 5px;
+        background-color: #000;
+        font-size: 4em;
+    }
+    .merry-christmas::after {
+        content: "\01f384";
+        animation: change ease-in-out 10s infinite alternate;
+
+    }
 #dailyResult {
     /* color: #000; */
     width: 300px;
