--- a/style.css
+++ b/style.css
@@ -45,44 +45,16 @@ li {
     height: 400px;
     gap: 20px;
     background-color: #000;
-    background-image: url("https://i.postimg.cc/TwXjJjQ5/christmas-6743572-1280.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+ 
     padding: 20px 0;
-    /* animation: change ease-in-out 10s infinite alternate; */
 }
-    @keyframes change {
-        0% {
-            opacity: 0;
-        }
-        25% {
-            opacity: 0.2;
-        }
-        50% {
-            opacity: 0.6; 
-        }
-        75% {
-            opacity: 0.8;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
-.navigation .merry-christmas {
+    canvas {
         position: absolute;
-        color: #f5f5f5;
-        top: 65%;
-        padding: 10px;
-        border-radius: 5px;
-        background-color: #000;
-        font-size: 4em;
-}
-.merry-christmas::after {
-    content: "\01f384";
-    animation: change ease-in-out 10s infinite alternate;
-
-}
+        display: block;
+        width: 100%;
+        height: 400px;
+        z-index: 1;
+    }
 .navigation .anchor {
     color: #fff;
     width: 300px;
@@ -92,6 +64,7 @@ li {
     border: none;
     border-radius: 5px;
     font-size: 20px;
+    z-index: 2;
 }
 #dailyResult:visited {
     color: #f5f5f5;
@@ -227,7 +200,7 @@ main {
 
 iframe {
     width: 500px; 
-    height: 80rem;  
+    height: 90rem;  
     margin-block-end: 25px; 
     border: none; 
 }
