--- a/GAMES/tableStyles.css
+++ b/GAMES/tableStyles.css
@@ -77,9 +77,10 @@ td {
 }
 .days{
     position: relative;
-    color: brown;
+    color: #000;
     border: 1px solid black;
     background-color: whitesmoke;
+    font-weight: bolder;
 }
 
 .xMas-tree {
@@ -110,13 +111,7 @@ text-align: center;
 font-size: 25px;
 }
 
-.symbol {
-    text-align: center;
-}
-.newYearSymbol {
-    margin: auto 20px;
-    font-size: x-large;
-}
+
 .happyNewYear {
     color: #fff;
     text-align: center;
@@ -126,6 +121,16 @@ font-size: 25px;
     font-size: 20px;
     background-color: #000;
 }
+.symbol {
+    margin: auto 5px;
+    font-size: large;
+}
+.year-twoFour{
+    text-align: center;
+    padding: 20px;
+    font-weight: bolder;
+    font-size: x-large;
+} 
 
 
 
