--- a/style.css
+++ b/style.css
@@ -75,11 +75,13 @@ li {
 
 li a {
     color: #fff;
+    text-decoration-color: #ffc0cb;
     padding: 15px;
-    text-decoration: none;
+    font-size: 18px;
 }
 li a:hover {
-    color: #0000ff;
+    color: #0000ff !important;
+    text-decoration-color: #ff0000;
     background-color: #fff;    
     border-radius: 5px;
     transition: 0.5s;
@@ -91,18 +93,18 @@ li a:visited:hover {
     color: #000;
 }
 .home {
-    color: black;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
+    color: #ffc0cb !important; 
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
     border-radius: 15px;
     font-size: 20px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     /* padding: 10px; */
 }
-.home a:hover{
-    color: red;
-    border-radius: 15px; 
-    background-color: white;
+.home:hover{
+    color: #ff0000 !important; 
+    border-radius: 10px; 
+    /* background-color: white; */
 
 }
   
