--- a/GAMES/tableStyles.css
+++ b/GAMES/tableStyles.css
@@ -112,6 +112,13 @@ font-size: 25px;
 }
 
 
+.end-of-the-year {
+    color: #0303c6;
+    text-align: center;
+    font-weight: bold;
+}
+
+
 .happyNewYear {
     color: #fff;
     text-align: center;
