--- a/style.css
+++ b/style.css
@@ -25,16 +25,49 @@ body {
 
 header {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     padding: 0 0 20px;
     background-color: whitesmoke; 
 }
+.brand-container {
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 20px 0;
+    gap: 1rem;
+    background-color: #015ea0d9;
+    font-size: 30px;
+}
+.visual-lotto-board {
+    text-align: center;
+    text-shadow: 2px 1px 1px #000;
+    border: 1px solid #0000001a;
+    border-radius: 5px;
+    padding: 10px;
+    /* background-color: #015ea0d6; */
+
+}
 nav {
     padding: 40px 0 0;
-    background-color: #005590;
+    /* background-color: #005590; */
+    background: url("https://i.postimg.cc/YCxC6SrH/c05ad767-42ea-4f5d-b482-d8bd29e67d1b.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     
+}
+.list-of-games {
+    color: #000;
+    text-align: center;
+    text-shadow: 2px 2px 1px #fff;
+    padding: 15px 5px;
+    font-size: 30px;
 }
 ul {
     list-style-type: none;
@@ -46,10 +79,24 @@ ul {
     padding: 15px; 
 }
 li {
+    /* color: #000; */ 
     display: block;
-    border-right: 1px solid #ffffff5e;
+    width: 120px;
+    text-align: center;
+    padding: 5px;
     margin: 0.5em auto; 
+    background-color: #000000c2;
+    border-right: 1px solid #daa520;
+    border-left: 1px solid #00000000;
+    border-top: 1px solid #00000000;
+    border-bottom: 1px solid #00000000;
+    border-radius: 5px;
     font-size: small;
+}
+li:hover {
+    transform: scale(1.2);
+    transition: 0.5s;
+    border: 1px solid #daa520;
 }
 .navigation {
     position: relative;
@@ -90,31 +137,34 @@ li {
 
 
 li a {
-    color: #fff;
-    text-decoration-color: #ffc0cb;
-    padding: 15px;
+    color: #ffff00;
+    text-decoration-color: #fff;
     font-size: 18px;
 }
-li a:hover {
+/* li a:hover {
     color: #0000ff !important;
     text-decoration-color: #ff0000;
     background-color: #fff;    
     border-radius: 5px;
     transition: 0.5s;
-}
+} */
 li a:visited {
-    color: #b3d1de;
+    color: #daa520; 
 }
-li a:visited:hover {
+/* li a:visited:hover {
     color: #000;
-}
-.home {
-    color: #ffc0cb !important; 
+} */
+#home {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+
+    /* color: #ffc0cb !important; 
     border-left: 1px solid #000;
     border-right: 1px solid #000;
     border-radius: 15px;
     font-size: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
     /* padding: 10px; */
 }
 .home:hover{
@@ -328,6 +378,14 @@ footer img {
             width: 100%;
         }
 
+        nav {
+            width: 100%;
+        }
+
+        .navigation .anchor {
+            width: 200px;
+        }
+
 
         .classification-wrapper {
             width: 100%;
@@ -335,11 +393,17 @@ footer img {
         .classification {
             width: inherit;
         }
+
+        /* footer {
+            flex-direction: column !important;
+         } */
      }
 
+     
 
 
-    /*(360px to 599px devices)*/    
+
+    /*(600px to 700px devices)*/    
     @media screen and (max-width: 700px) {
         body {
             width: 100%;
@@ -468,7 +532,7 @@ footer img {
 
 
     /*(360px  to 390 devices)*/   
-   @media screen and (max-width: 391px) {
+   @media screen and (max-width: 392px) {
         body {
             width: 100%;
         }
@@ -549,7 +613,7 @@ footer img {
 
 
     /*(320px device)*/   
-    @media screen and (max-width: 358px ) {
+    @media screen and (max-width: 359px ) {
         body {
             width: 100%;
         }
