--- a/style.css
+++ b/style.css
@@ -328,6 +328,7 @@ footer {
     padding: 5rem;
     gap: 30px; 
     background-color: #000;
+    color: lig
 }
 .contentInfo-wrapper {
     display: flex;
