--- a/style.css
+++ b/style.css
@@ -161,7 +161,20 @@ li a:visited {
 } */
 
 
-  
+/* #demo-passage {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 300px;
+    background-color: #000;
+} */
+/* #that {
+    height: 100px;
+    width: 600px;
+    background-color: #ffffff17;
+} */
 
 /* main */
 main {
