--- a/style.css
+++ b/style.css
@@ -18,6 +18,31 @@ html {
     border-radius: 50%;
 }
 
+#loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    color: #add8eb;
+    width: 100%;
+    height: 100%;
+    background-color: #000000d7;
+    z-index: 9999;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bolder;
+}
+#loadingImage {
+    margin-top: 20%;
+    border-radius: 50px;
+    background-color: #0000001a;
+    padding: 0.5px;
+    animation: spin 1s infinite linear;
+}
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
 body {
     width: 100%;
     height: auto;
