--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
     border-radius: 50%;
 }
 
-#loading {
+/* #loading {
     position: fixed;
     top: 0;
     left: 0;
@@ -30,8 +30,8 @@ html {
     text-align: center;
     font-size: 20px;
     font-weight: bolder;
-}
-#loadingImage {
+} */
+/* #loadingImage {
     margin-top: 20%;
     border-radius: 50px;
     background-color: #0000001a;
@@ -41,7 +41,7 @@ html {
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
-        }
+        } */
 
 body {
     width: 100%;
