--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ html {
     border-radius: 50%;
 }
 
-/* #loading {
-    display: none;
+#loading {
+    /* display: none;  */
     position: fixed;
     top: 0;
     left: 0;
@@ -31,8 +31,8 @@ html {
     text-align: center;
     font-size: 20px;
     font-weight: bolder;
-} */
-/* #loadingImage {
+} 
+#loadingImage {
     margin-top: 20%;
     border-radius: 50px;
     background-color: #0000001a;
@@ -42,7 +42,7 @@ html {
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
-        } */
+        } 
 
 body {
     width: 100%;
