--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ html {
     border-radius: 50%;
 }
 
-#loading {
-    /* display: none;  */
+/* #loading {
     position: fixed;
     top: 0;
     left: 0;
@@ -29,10 +28,10 @@ html {
     background-color: #000000d7;
     z-index: 9999;
     text-align: center;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: bolder;
-} 
-#loadingImage {
+}  */
+/* #loadingImage {
     margin-top: 20%;
     border-radius: 50px;
     background-color: #0000001a;
@@ -42,7 +41,7 @@ html {
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
-        } 
+        }  */
 
 body {
     width: 100%;
